@@ -15,6 +15,7 @@
  * Avoid busy waits and failing to read all output from spawned Omni calls. (#1016)
  * Remove old non-AJAX listresources call from details page. Only call it once. (#1017)
  * Add beta Jacks RSpec editor for adding resources. (#1013)
+ * Refactor listresources so that only one call is made and Jacks is shown by defualt.
 
 == 2.13 ==
  * Provide UI for renewing certificates (#241)
